--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/kit": "^1.27.4",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.1",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.3.5",
