--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-nesting": "^12.0.1",
     "postcss-preset-env": "^9.3.0",
     "svelte": "^5.0.0-next.1",
+    "svelte-adapter-bun": "^0.5.1",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.3.5",
     "tslib": "^2.4.1",
@@ -25,6 +26,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/adapter-node": "^1.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.2"
   }
 }
