--- a/package.json
+++ b/package.json
@@ -1,6 +1,22 @@
 {
   "name": "data-report-layout",
   "version": "0.0.1",
+  "devDependencies": {
+    "@sveltejs/kit": "^1.27.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
+    "postcss-preset-env": "^9.3.0",
+    "svelte": "next",
+    "svelte-adapter-bun": "^0.5.1",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.3.6",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^4.4.2"
+  },
   "private": true,
   "scripts": {
     "dev": "vite dev",
@@ -9,24 +25,5 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.27.4",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "postcss-nesting": "^12.0.1",
-    "postcss-preset-env": "^9.3.0",
-    "svelte": "^5.0.0-next.1",
-    "svelte-adapter-bun": "^0.5.1",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.3.5",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2"
-  },
-  "type": "module",
-  "dependencies": {
-    "@sveltejs/adapter-node": "^1.3.1",
-    "@tailwindcss/aspect-ratio": "^0.4.2"
-  }
+  "type": "module"
 }
