--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "data-report-layout",
   "version": "0.0.1",
   "devDependencies": {
-    "@sveltejs/kit": "^1.27.4",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
@@ -15,7 +16,7 @@
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "vite": "^5.0.0"
   },
   "private": true,
   "scripts": {
